# random-wikipedia-article

./: Dockerfile  README.md  pyproject.toml
src/random_wikipedia_article/: __main__.py
